--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Nexrova" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <meta property="og:title" content="Nexrova - AI-Powered Hotel Automation Solutions" />
     <meta property="og:description" content="Transform your hotel operations with Nexrova's AI-powered automation solutions. Enhance guest satisfaction while reducing operational costs." />
     <meta property="og:type" content="website" />
