--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta property="og:title" content="Nexrova - AI-Powered Hotel Automation Solutions" />
     <meta property="og:description" content="Transform your hotel operations with Nexrova's AI-powered automation solutions. Enhance guest satisfaction while reducing operational costs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  </head> -->
 
   <body>
     <div id="root"></div>
