--- a/index.html
+++ b/index.html
@@ -13,33 +13,27 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
 
     <!-- Open Graph / Social Media -->
-    <meta
-      property="og:title"
-      content="Nexrova - AI-Powered Hotel Automation Solutions"
-    />
-    <meta
-      property="og:description"
-      content="Transform your hotel operations with Nexrova's AI-powered automation solutions. Enhance guest satisfaction while reducing operational costs."
-    />
+    <meta property="og:title" content="Nexrova - AI-Powered Hotel Automation Solutions" />
+    <meta property="og:description" content="Transform your hotel operations with Nexrova's AI-powered automation solutions. Enhance guest satisfaction while reducing operational costs." />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta property="og:url" content="https://nexrova.com" />
+    <meta property="og:image" content="https://nexrova.com/og-image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <meta name="twitter:creator" content="@Nexrova" />
+    <meta name="twitter:title" content="Nexrova - AI-Powered Hotel Automation Solutions" />
+    <meta name="twitter:description" content="Transform your hotel operations with Nexrova's AI-powered automation solutions." />
+    <meta name="twitter:image" content="https://nexrova.com/og-image.png" />
   </head>
 
   <body>
@@ -47,3 +41,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
